# bndes_depesas_viagens

./: .gitignore  README.md  main.py  pyproject.toml
bndes_despesas_viagens/: Makefile  README.md  pyproject.toml
bndes_despesas_viagens/bndes_despesas_viagens/: extract_from_api.py
bndes_despesas_viagens/docs/: mkdocs.yml
bndes_despesas_viagens/docs/docs/: index.md
bndes_despesas_viagens/notebooks/: eda_despesas_viagens.ipynb
