[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bndes_despesas_viagens"
version = "0.0.1"
description = "Projeto de aplica\u00e7\u00e3o de Modelo de ML Regress\u00e3o Linear em base de dados de despesas de Viagens para previs\u00e3o de Custos de Viagem"
authors = [
  { name = "Renan de Moraes" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
]
requires-python = "==3.11.0"


[tool.ruff]
line-length = 99
src = ["bndes_despesas_viagens"]
include = ["pyproject.toml", "bndes_despesas_viagens/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["bndes_despesas_viagens"]
force-sort-within-sections = true

